unpackaged/main/default/objects/Other_Cost_Quote_Item__c/Other_Cost_Quote_Item__c.object-meta.xml
<CustomObject>
    <label>Other Cost Quote Item</label>
    <nameField>
        <displayFormat>OCQI-{0000}</displayFormat>
        <label>Other Cost Quote Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Cost Quote Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>