unpackaged/main/default/objects/Other_Cost_Quote_Item__c/fields/Cost_Label__c.field-meta.xml
<CustomField>
    <fullName>Cost_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>