unpackaged/main/default/objects/Other_Cost_Quote_Item__c/fields/Cost_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Cost_Line_Number__c</fullName>
    <label>Cost Line Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>