unpackaged/main/default/objects/Other_Cost_Quote_Item__c/fields/Cost_Value__c.field-meta.xml
<CustomField>
    <fullName>Cost_Value__c</fullName>
    <label>Cost Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>